样式使用flex小改动

--- a/src/common/css/base.less
+++ b/src/common/css/base.less
@@ -1,5 +1,8 @@
 // 公共类
 #common-wrapper {
+    div, span {
+        box-sizing: border-box;
+    }
     .hide {
         display: none !important;
     }
